added new changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+   <div>
+      <img src="image.png" alt="lenny">
+   </div>
     <h1>welcome to moringa<i class="fas fa-school    "></i></h1>
  <h3>my hobbies</h3>
  <ul>
@@ -22,7 +25,6 @@
     <li>cat</li>
     <li>fish</li>
     <li>parrot</li>
-    <li></li>
  </ol>
  <p>hello wolrd</p>
  
